--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ I’m always afraid that something I say might hurt you or make you stop talking
 
 <div class="paper image">
   <p></p>
-  <img src="images/2.jpg" />
+  <img src="2.jpg" />
 </div>
 
 <div class="paper">
@@ -118,4 +118,5 @@ I’m always afraid that something I say might hurt you or make you stop talking
   <script  src="./script.js"></script>
 
 </body>
+
 </html>
