--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </div>
 <div class="paper image"><p>
-I want to confess that I just want to see you happy and healthy, i am alive to just see your appearence.</br> kaash!! kaash!! tum samjh pati.</br>
+I want to confess that I just want to see you happy and healthy, i am alive to just see your appearence.</br> 
 Mujhe maaf kar dena agar kuch galat laga ho tumhe🙏🙏🙏.
      </p>
    <img src="images/1.jpeg" />
@@ -39,12 +39,12 @@ Kaash…
 </div>
 
 <div class="paper image"><p>
-<!--The very first day 21 nov 25 when i saw your photo i'm stunned that <b>itna bhi koi sunder ho sakta hai kya</b>
+<!--The very first day 21 nov 25 when i saw your photo i'm stunned that <b>itna bhi koi  ho sakta hai kya</b>
 but kabhi keh nahi paya, humari baat 2-3 din hui to mujhe laga ab humari baat roj hogi
 mai har roz apke message and calls k intzaar karne laga but mai apne s call karke disturb nahi karna chahta ki kahin app disturb & irritate ho jao.
 mai tumhe pareshan nahi karna chahta bas apne man ki baat kehna chahta hun, agar tumhe nahi pasand to koi baat nahi. 
 mai tumhare piche kabhi nahin aaunga, tum khush maii khush.-->
-The very first day — 21 Nov 25 — when I saw your photo, I was stunned. I genuinely felt, “itna bhi koi sundar ho sakta hai kya?”
+The very first day — 21 Nov 25 — when I saw your photo, I was stunned. I genuinely felt, “itna bhi koi pyara/cute ho sakta hai kya?”
 But I could never say it.
 
 When we talked for 2–3 days, I felt like maybe we would talk every day.
@@ -75,7 +75,7 @@ I’m always afraid that something I say might hurt you or make you stop talking
 
   
 <div class="paper image">
-  <p> and I fallen in<br>
+  <p> I fallen in<br>
     Love with the way you talk<br> and your bindassness.</p>
    <img src="images/1.jpeg" />
 </div>
@@ -120,5 +120,6 @@ I’m always afraid that something I say might hurt you or make you stop talking
 </body>
 
 </html>
+
 
 
